Fine-tuning functions

--- a/Annotation Scripts/NBS Genes/nbs_genes.ipynb
+++ b/Annotation Scripts/NBS Genes/nbs_genes.ipynb
@@ -107,12 +107,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Chromosome, start and stop positions were added to the NBS Gene list by joining it with the ensembl_genes table using gene name. This resulted in mulitple listings per gene for each exon, allowing for more precise matches. \n",
+      "Chromosome, start and stop positions were added to the NBS Gene list by joining it with the \n",
+      "ensembl_genes table using gene name. This resulted in mulitple listings per gene for each exon, \n",
+      "allowing for more precise matches. \n",
       "\n",
-      "        CREATE TABLE users_selasady.nbs_positional AS SELECT nbs.gene, nbs.entrez_gene_id as entrez_id, ens.gene_id AS ensembl_id, \n",
-      "        ens.chromosome as chrom, ens.start, ens.stop, nbs.condition, nbs.omim_phenotype, nbs.va_name, nbs.inheritance, \n",
-      "        nbs.allelic_condition, nbs.in_pgb, nbs.level, ens.feature, ens.transcript_name, ens.transcript_id, ens.exon_number, ens.exon_id, \n",
-      "        ens.gene_biotype, nbs.comments\n",
+      "        CREATE TABLE users_selasady.nbs_positional AS SELECT nbs.gene, \n",
+      "        nbs.entrez_gene_id as entrez_id, ens.gene_id AS ensembl_id, ens.chromosome as chrom, \n",
+      "        ens.start, ens.stop, nbs.condition, nbs.omim_phenotype, nbs.va_name, nbs.inheritance, \n",
+      "        nbs.allelic_condition, nbs.in_pgb, nbs.level, ens.feature, ens.transcript_name, \n",
+      "        ens.transcript_id, ens.exon_number, ens.exon_id, ens.gene_biotype, nbs.comments\n",
       "        FROM users_selasady.nbs_genes nbs\n",
       "        LEFT JOIN\n",
       "                 public_hg19.ensembl_genes ens\n",
@@ -134,6 +137,7 @@
      "metadata": {},
      "source": [
       "Next the Kaviar-filtered variants were joined with nbs _ ensembl using chromosome, start and stop positions, returning rare variants in the nbs_gene list, and annotated those with ClinVar. \n",
+      "\n",
       "\n",
       "        CREATE TABLE users_selasady.nbs_annotated AS \n",
       "            WITH nbs AS (\n",
@@ -216,7 +220,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "       sample_id chrom       pos      rs_id ref alt  qual             filter  \\\n8   102-00932-03    14  36986022  rs5807883  CA   C  9.00  LowGQX;HighREFREP   \n9   102-00932-03    14  36986022  rs5807883  CA   C  9.00  LowGQX;HighREFREP   \n10  102-00932-03    14  36986022  rs5807883  CA   C  9.00  LowGQX;HighREFREP   \n23  102-00961-03    14  36986022  rs5807883  CA   C  9.00  LowGQX;HighREFREP   \n24  102-00961-03    14  36986022  rs5807883  CA   C  9.00  LowGQX;HighREFREP   \n\n     gt  kav_freq    ...    transcript_name    transcript_id exon_number  \\\n8   0/1  0.004525    ...         NKX2-1-004  ENST00000518149           3   \n9   0/1  0.004525    ...         NKX2-1-001  ENST00000498187           2   \n10  0/1  0.004525    ...         NKX2-1-002  ENST00000354822           3   \n23  0/1  0.004525    ...         NKX2-1-004  ENST00000518149           3   \n24  0/1  0.004525    ...         NKX2-1-001  ENST00000498187           2   \n\n            exon_id    gene_biotype comments clin_hgvs clin_sig clin_dbn  \\\n8   ENSE00001954071  protein_coding               None     None     None   \n9   ENSE00002356545  protein_coding               None     None     None   \n10  ENSE00002375051  protein_coding               None     None     None   \n23  ENSE00001954071  protein_coding               None     None     None   \n24  ENSE00002356545  protein_coding               None     None     None   \n\n   clin_acc  \n8      None  \n9      None  \n10     None  \n23     None  \n24     None  \n\n[5 rows x 31 columns]\n"
+        "       sample_id chrom       pos       rs_id ref alt    qual  \\\n15  102-00997-03    14  36988829        None   A   G  179.00   \n36  102-00932-03    20  43706849        None  GT   G   29.00   \n37  102-00932-03    20  43706849        None  GT   G   29.00   \n40  102-07009-03    20  43707208  rs34932056  CT   C    8.00   \n41  102-07009-03    20  43707208  rs34932056  CT   C    8.00   \n\n               filter   gt  kav_freq   ...    transcript_name  \\\n15               PASS  0/1  0.001544   ...         NKX2-1-001   \n36  LowGQX;HighREFREP  0/1  0.001727   ...           STK4-202   \n37  LowGQX;HighREFREP  0/1  0.001727   ...           STK4-003   \n40  LowGQX;HighREFREP  0/1  0.001608   ...           STK4-202   \n41  LowGQX;HighREFREP  0/1  0.001608   ...           STK4-003   \n\n      transcript_id exon_number          exon_id    gene_biotype  \\\n15  ENST00000498187           1  ENSE00002064956  protein_coding   \n36  ENST00000499879          10  ENSE00001982036  protein_coding   \n37  ENST00000372806          11  ENSE00001458697  protein_coding   \n40  ENST00000499879          10  ENSE00001982036  protein_coding   \n41  ENST00000372806          11  ENSE00001458697  protein_coding   \n\n          comments clin_hgvs clin_sig clin_dbn clin_acc  \n15                      None     None     None     None  \n36  In development      None     None     None     None  \n37  In development      None     None     None     None  \n40  In development      None     None     None     None  \n41  In development      None     None     None     None  \n\n[5 rows x 31 columns]\n"
        ]
       }
      ],
@@ -228,7 +232,7 @@
       "print newborns.head()"
      ],
      "language": "python",
-     "prompt_number": 32
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -241,9 +245,24 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "The system cannot find the path specified.\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "'perl' is not recognized as an internal or external command,\noperable program or batch file.\n"
+       ]
+      }
+     ],
      "input": [
-      "import vcf\n",
+      "import os\n",
       "\n",
       "# output columns to vcf file using a modified version of anntools tab2vcf.py\n",
       "nb_to_vcf = newborns[['chrom','pos', 'ref', 'alt', 'qual', 'filter','rs_id', 'sample_id', 'gt','gene']]\n",
@@ -262,7 +281,17 @@
       "!perl /Users/selasady/tools/ensembl-tools-release-81/scripts/variant_effect_predictor/variant_effect_predictor.pl -i /Users/selasady/impala_scripts/newborns.tsv.vcf --cache --port 3337"
      ],
      "language": "python",
-     "prompt_number": 178
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
     },
     {
      "cell_type": "heading",
