Fine-tuning functions

--- a/Annotation Scripts/NBS Genes/nbs_genes.ipynb
+++ b/Annotation Scripts/NBS Genes/nbs_genes.ipynb
@@ -202,7 +202,7 @@
       "nbs_df = as_pandas(cur)"
      ],
      "language": "python",
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -215,30 +215,20 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "       sample_id chrom       pos       rs_id ref alt    qual  \\\n15  102-00997-03    14  36988829        None   A   G  179.00   \n36  102-00932-03    20  43706849        None  GT   G   29.00   \n37  102-00932-03    20  43706849        None  GT   G   29.00   \n40  102-07009-03    20  43707208  rs34932056  CT   C    8.00   \n41  102-07009-03    20  43707208  rs34932056  CT   C    8.00   \n\n               filter   gt  kav_freq   ...    transcript_name  \\\n15               PASS  0/1  0.001544   ...         NKX2-1-001   \n36  LowGQX;HighREFREP  0/1  0.001727   ...           STK4-202   \n37  LowGQX;HighREFREP  0/1  0.001727   ...           STK4-003   \n40  LowGQX;HighREFREP  0/1  0.001608   ...           STK4-202   \n41  LowGQX;HighREFREP  0/1  0.001608   ...           STK4-003   \n\n      transcript_id exon_number          exon_id    gene_biotype  \\\n15  ENST00000498187           1  ENSE00002064956  protein_coding   \n36  ENST00000499879          10  ENSE00001982036  protein_coding   \n37  ENST00000372806          11  ENSE00001458697  protein_coding   \n40  ENST00000499879          10  ENSE00001982036  protein_coding   \n41  ENST00000372806          11  ENSE00001458697  protein_coding   \n\n          comments clin_hgvs clin_sig clin_dbn clin_acc  \n15                      None     None     None     None  \n36  In development      None     None     None     None  \n37  In development      None     None     None     None  \n40  In development      None     None     None     None  \n41  In development      None     None     None     None  \n\n[5 rows x 31 columns]\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "input": [
       "newborns = nbs_df[nbs_df['sample_id'].str.endswith('03')]\n",
       "mothers = nbs_df[nbs_df['sample_id'].str.endswith('01')]\n",
-      "fathers = nbs_df[nbs_df['sample_id'].str.endswith('02')]\n",
-      "\n",
-      "print newborns.head()"
+      "fathers = nbs_df[nbs_df['sample_id'].str.endswith('02')]"
      ],
      "language": "python",
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The newborn set was out to Plink's tab2vcf script and annotated with coding consequences for rows containing rsID's, using ensembl's VEP version 81 for grch37 (ftp://ftp.ensembl.org/pub/release-81/variation/VEP/homo_sapiens_vep_81_GRCh37.tar.gz) "
+      "The newborn set was output to a modified version of Plink's tab2vcf script and annotated with coding consequences using ensembl's VEP version 81 for grch37 (ftp://ftp.ensembl.org/pub/release-81/variation/VEP/homo_sapiens_vep_81_GRCh37.tar.gz). "
      ]
     },
     {
@@ -248,50 +238,53 @@
      "outputs": [
       {
        "output_type": "stream",
-       "stream": "stderr",
+       "stream": "stdout",
        "text": [
-        "The system cannot find the path specified.\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "'perl' is not recognized as an internal or external command,\noperable program or batch file.\n"
+        "newborns.tsv\n0 1 2 3 6 7 9 4 5 8\n"
        ]
       }
      ],
      "input": [
       "import os\n",
+      "import sys\n",
       "\n",
       "# output columns to vcf file using a modified version of anntools tab2vcf.py\n",
       "nb_to_vcf = newborns[['chrom','pos', 'ref', 'alt', 'qual', 'filter','rs_id', 'sample_id', 'gt','gene']]\n",
-      "#rename rsid column\n",
+      "# rename rsid column\n",
       "nb_to_vcf = nb_to_vcf.rename(columns = {'rs_id':'id'})\n",
-      "#add unique variant id to rows that have no rsid\n",
+      "# add unique variant id to rows that have no rsid\n",
       "nb_to_vcf['id'].fillna(nb_to_vcf.apply(lambda x:'{}:{}:{}:{}'.format(x['chrom'],x['pos'], x['ref'], x['alt']),axis=1), inplace=True)\n",
       "\n",
       "# write to file for conversion to vcf\n",
       "nb_to_vcf.to_csv('{}/newborns.tsv'.format(os.getcwd()), header=True, encoding='utf-8', sep=\"\\t\", index=False)\n",
       "\n",
       "# run tab2vcf.py script\n",
-      "!/Users/selasady/impala_scripts/tab2vcf.py /Users/selasady/impala_scripts/newborns.tsv\n",
-      "\n",
-      "# feed vcf file to VEP\n",
-      "!perl /Users/selasady/tools/ensembl-tools-release-81/scripts/variant_effect_predictor/variant_effect_predictor.pl -i /Users/selasady/impala_scripts/newborns.tsv.vcf --cache --port 3337"
+      "try:\n",
+      "    %run ./tab2vcf.py newborns.tsv\n",
+      "except Exception,e: print str(e)"
      ],
      "language": "python",
-     "prompt_number": 6
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
-     "input": [
-      ""
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "ERROR: Cache directory /.vep/homo_sapiens not found\n"
+       ]
+      }
      ],
-     "language": "python"
+     "input": [
+      "#run VEP on newborn vcf file (update location of VEP script before running)\n",
+      "!perl D:\\Documents\\tools\\ensembl-tools-release-81\\ensembl-tools-release-81\\scripts\\variant_effect_predictor\\variant_effect_predictor.pl -i newborns.vcf --cache \\home\\summer\\.vep/ --port 3337 --everything"
+     ],
+     "language": "python",
+     "prompt_number": 24
     },
     {
      "cell_type": "heading",
@@ -305,7 +298,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The newborn subset was split into dominant and homozygous recessive disorders and output to tsv files. "
+      "The newborn subset was split into dominant, homozygous recessive and heterozygous variants for downstream analysis. \n",
+      "\n",
+      "A variant id composed of chrom:pos:ref:alt was added for matching nb comp_het variants with parent variants.  "
      ]
     },
     {
@@ -315,10 +310,16 @@
      "outputs": [],
      "input": [
       "nb_dominant = newborns[(newborns['inheritance'] == 'AD')]\n",
-      "nb_hom_recessive = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '1/1'))]"
+      "nb_hom_recessive = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '1/1'))]\n",
+      "nb_het = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '0/1'))]\n",
+      "\n",
+      "# add variant id's to simplify variant matching\n",
+      "nb_het['var_id'] = nb_het.apply(lambda x:'{}:{}:{}:{}'.format(x['chrom'],x['pos'], x['ref'], x['alt']),axis=1)\n",
+      "mothers['var_id'] = mothers.apply(lambda x:'{}:{}:{}:{}'.format(x['chrom'],x['pos'], x['ref'], x['alt']),axis=1)\n",
+      "fathers['var_id'] = fathers.apply(lambda x:'{}:{}:{}:{}'.format(x['chrom'],x['pos'], x['ref'], x['alt']),axis=1)"
      ],
      "language": "python",
-     "prompt_number": 110
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -342,72 +343,118 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "AttributeError",
-       "evalue": "'DataFrame' object has no attribute 'str'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-        "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-113-901bafbff359>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgroup\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mby_gene\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;31m#for each gene, if there is a nb variant at more than on position\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mgroup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'sample_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'03'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnunique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m         \u001b[0;31m# # pull out mom and dad positions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;31m# mom_pos = group[(group['sample_id'].str.endswith('01'))].pos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/pandas/core/generic.pyc\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1834\u001b[0m         \"\"\"\n\u001b[1;32m   1835\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_internal_names_set\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1836\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1837\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1838\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'str'"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "        sample_id chrom      pos      rs_id ref               alt    qual  \\\n96   102-00961-03    17  7123240  rs6145976   T  TGGGCGTGCAGGACGC  401.00   \n97   102-00961-03    17  7123240  rs6145976   T  TGGGCGTGCAGGACGC  401.00   \n98   102-00961-03    17  7123240  rs6145976   T  TGGGCGTGCAGGACGC  401.00   \n99   102-00961-03    17  7123240  rs6145976   T  TGGGCGTGCAGGACGC  401.00   \n100  102-00961-03    17  7123240  rs6145976   T  TGGGCGTGCAGGACGC  401.00   \n\n    filter   gt  kav_freq              ...                  transcript_id  \\\n96    PASS  0/1  0.000119              ...                ENST00000577191   \n97    PASS  0/1  0.000119              ...                ENST00000584103   \n98    PASS  0/1  0.000119              ...                ENST00000577857   \n99    PASS  0/1  0.000119              ...                ENST00000582056   \n100   PASS  0/1  0.000119              ...                ENST00000580263   \n\n    exon_number          exon_id    gene_biotype comments clin_hgvs clin_sig  \\\n96            1  ENSE00002696271  protein_coding               None     None   \n97            1  ENSE00002721019  protein_coding               None     None   \n98            1  ENSE00002687373  protein_coding               None     None   \n99            1  ENSE00002687373  protein_coding               None     None   \n100           1  ENSE00002687373  protein_coding               None     None   \n\n    clin_dbn clin_acc                         var_id  \n96      None     None  17:7123240:T:TGGGCGTGCAGGACGC  \n97      None     None  17:7123240:T:TGGGCGTGCAGGACGC  \n98      None     None  17:7123240:T:TGGGCGTGCAGGACGC  \n99      None     None  17:7123240:T:TGGGCGTGCAGGACGC  \n100     None     None  17:7123240:T:TGGGCGTGCAGGACGC  \n\n[5 rows x 32 columns]\n"
        ]
       }
      ],
      "input": [
-      "# subset het newborns\n",
-      "nb_het = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '0/1'))]\n",
+      "# # rename mother's sample id column\n",
+      "# nb_and_mom.rename(columns = {'sample_id_y':'sample_id_m'}, inplace=True)\n",
+      "# \n",
+      "# # merge het newborns with matching variants from mother \n",
+      "# nb_and_dad = pd.merge(nb_het, fathers, on=['chrom', 'pos', 'ref', 'alt'], how='inner')\n",
+      "# # rename father's sample id column\n",
+      "# nb_and_dad.rename(columns = {'sample_id_y':'sample_id_f'}, inplace=True)\n",
+      "# \n",
+      "# # drop extra columns ending in _y from merge\n",
+      "# def drop_y(df):\n",
+      "#     for col in df:\n",
+      "#         if col.endswith('_y'):\n",
+      "#             df.drop(col, axis=1, inplace=True)\n",
+      "# \n",
+      "# drop_y(nb_and_mom)\n",
+      "# drop_y(nb_and_dad)\n",
       "\n",
-      "# merge het newborns with matching variants from mother and father\n",
-      "# to get dataframe of newborn variants that are potential comp_het\n",
-      "nb_and_mom = pd.merge(nb_het, mothers, on=['chrom', 'pos', 'ref', 'alt'], how='inner')\n",
-      "trio = pd.merge(nb_and_mom, fathers, on=['chrom', 'pos', 'ref', 'alt'], how='inner')\n",
+      "#combine variants that match with parents\n",
+      "# trio = nb_and_mom.append(pd.DataFrame(data=nb_and_dad),ignore_index=True)\n",
+      "# \n",
+      "# print trio.head()\n",
       "\n",
-      "#rename columns in merged table\n",
-      "#change 'pos' colname to 'start'\n",
-      "trio = trio.rename(columns = {'sample_id_x':'sample_id', 'rs_id_x':'rs_id', 'qual_x':'qual',\n",
-      "                              'filter_x':'filter', 'gt_x':'gt', 'kav_freq_x':'kav_freq'\n",
-      "                              })\n",
+      "\n",
+      "# trio = pd.merge(nb_and_mom, fathers, on=['chrom', 'pos', 'ref', 'alt'], how='inner')\n",
+      "\n",
+      "# \n",
+      "# for name, group in by_gene:\n",
+      "#     #for each gene, if there is a nb variant at more than on position\n",
+      "#     if group[(group['sample_id'].str.endswith('03'))].pos.nunique() > 1:\n",
+      "#         # # pull out mom and dad positions\n",
+      "#         # mom_pos = group[(group['sample_id'].str.endswith('01'))].pos \n",
+      "#         # dad_pos = group[(group['sample_id'].str.endswith('02'))].pos\n",
+      "#         # # if there are variants from each parent\n",
+      "#         # if len(mom_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos) > 0) & \\\n",
+      "#         #         len(dad_pos.isin(group[(group['sample_id'].str.endswith('02'))].pos) > 0):\n",
+      "#         #     # and those variants are not the same\n",
+      "#         #     if len(mom_pos[(mom_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos))] -\n",
+      "#         #     dad_pos[(dad_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos))]) > 0:\n",
+      "#         #         #add that gene to comp_hets list\n",
+      "#                 comp_hets.append(group)\n",
+      "# \n",
+      "# print comp_hets\n",
+      "\n",
+      "\n",
+      "\n",
+      "# #rename columns in merged table\n",
+      "# # trio.rename(columns = {'sample_id_x':'sample_id', 'rs_id_x':'rs_id', 'qual_x':'qual',\n",
+      "# #                               'filter_x':'filter', 'gt_x':'gt', 'kav_freq_x':'kav_freq'}, inplace=True)\n",
+      "# \n",
+      "# # create members column for downstream analysis\n",
+      "# def label_member(row):\n",
+      "#     if row[(row['sample_id_x'].endswith('03'))]:\n",
+      "#         return 'NB'\n",
+      "#     elif row[(row['sample_id_x'].endswith('01'))]:\n",
+      "#         return 'M'\n",
+      "#     elif row[(row['sample_id_x'].endswith('02'))]:\n",
+      "#         return 'F'\n",
+      "#     else:\n",
+      "#         return ''\n",
+      "#  \n",
+      "# # add member label to trio data frame\n",
+      "# trio['member'] = trio.apply (lambda row: label_member(row),axis=1)   \n",
+      "# \n",
+      "# print trio[(trio['member'] == 'M')]\n",
       "\n",
       "# group variants by gene name\n",
-      "by_gene = trio.groupby('gene')\n",
-      "\n",
-      "comp_hets = []\n",
-      "\n",
-      "\n",
-      "for name, group in by_gene:\n",
-      "    #for each gene, if there is a nb variant at more than on position\n",
-      "    if group[(group['sample_id'].str.endswith('03'))].pos.nunique() > 1:\n",
-      "        # # pull out mom and dad positions\n",
-      "        # mom_pos = group[(group['sample_id'].str.endswith('01'))].pos \n",
-      "        # dad_pos = group[(group['sample_id'].str.endswith('02'))].pos\n",
-      "        # # if there are variants from each parent\n",
-      "        # if len(mom_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos) > 0) & \\\n",
-      "        #         len(dad_pos.isin(group[(group['sample_id'].str.endswith('02'))].pos) > 0):\n",
-      "        #     # and those variants are not the same\n",
-      "        #     if len(mom_pos[(mom_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos))] -\n",
-      "        #     dad_pos[(dad_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos))]) > 0:\n",
-      "        #         #add that gene to comp_hets list\n",
-      "                comp_hets.append(group)\n",
-      "\n",
-      "print comp_hets"
+      "#by_gene = trio.groupby('gene')"
      ],
      "language": "python",
-     "prompt_number": 113
+     "prompt_number": 8
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "code",
+     "execution_count": null,
      "metadata": {},
-     "source": [
+     "outputs": [],
+     "input": [
+      "comp_hets = []\n",
+      "\n",
+      "for name, group in by_gene:\n",
+      "    # if a gene has nb variants at different positions and a variant from each parent\n",
+      "    if (group[(group['member'] == 'NB')].pos.nunique() > 1) & len(group[(group['member'] == 'M')]) > 0 & \\\n",
+      "            len(group[(group['member'] == 'F')]) > 0:\n",
+      "        print group\n",
+      "        \n",
+      "\n",
+      "        #if there are variants from each parent\n",
+      "        #     # and those variants are not the same\n",
+      "        #     if len(mom_pos[(mom_pos.isin(nb_pos))] - dad_pos[(dad_pos.isin(nb_pos))]) > 0:\n",
+      "        #         #add that gene to comp_hets list\n",
+      "        #         comp_hets.append(group)"
+     ],
+     "language": "python",
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
       ""
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "To DO: rename columns in merged data frame"
-     ]
+     ],
+     "language": "python"
     }
    ]
   }
